Seperating SC account setup, client account setup, and products

--- a/samconfig.toml
+++ b/samconfig.toml
@@ -4,7 +4,7 @@ version = 0.1
 
 [default]
 [default.global.parameters]
-stack_name = "aws-service-catalog-products"
+stack_name = "aws-service-catalog"
 
 [default.build.parameters]
 cached = true
@@ -14,7 +14,7 @@ parallel = true
 lint = true
 
 [default.deploy.parameters]
-capabilities = "CAPABILITY_IAM CAPABILITY_AUTO_EXPAND"
+capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 confirm_changeset = false
 resolve_s3 = true
 
