--- a/samconfig.toml
+++ b/samconfig.toml
@@ -16,10 +16,10 @@ lint = true
 [default.deploy.parameters]
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 confirm_changeset = false
-resolve_s3 = true
+#resolve_s3 = true
 
 [default.package.parameters]
-resolve_s3 = true
+#resolve_s3 = true
 
 [default.sync.parameters]
 watch = true
