fix tag handling

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -151,12 +151,8 @@ jobs:
               to_entries |
               map("--tags \(.key)=\(.value|tostring)") |
               . += [
-                {
-                  "org:branch":"${{ env.GITHUB_EVENT_REF_SLUG_URL }}"
-                },
-                {
-                  "org:stackName":"${{ env.GITHUB_REPOSITORY_NAME_PART_SLUG_URL }}-${{ env.GITHUB_EVENT_REF_SLUG_URL }}"
-                }
+                "org:branch=${{ env.GITHUB_EVENT_REF_SLUG_URL }}",
+                "org:stackName=${{ env.GITHUB_REPOSITORY_NAME_PART_SLUG_URL }}-${{ env.GITHUB_EVENT_REF_SLUG_URL }}"
               ] |
               join(" ")
             '
