--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -189,6 +189,7 @@ jobs:
         shell: bash
         run: |
           sam deploy \
+            --no-fail-on-empty-changeset \
             --template-file packaged-template.yaml \
             --stack-name ${{ env.GITHUB_REPOSITORY_NAME_PART_SLUG_URL }}-${{ env.GITHUB_EVENT_REF_SLUG_URL }} \
             --s3-bucket aws-sam-cli-sourcebucket-346402060170-us-east-1 \
